--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ packages = [{ include = "pyDataverse" }]
 python = "^3.8.1"
 httpx = "^0.27.0"
 jsonschema = "^4.21.1"
+python-doi = "^0.2.0"
+rdflib = "^6.1.1"
+mlcroissant = "^1.0.4"
 
 [tool.poetry.group.dev]
 optional = true
